--- a/init.html
+++ b/init.html
@@ -12,7 +12,7 @@
     <p><b>
             Simple poker layout
         </b></p>
-    <input id=image type="image" src="classicpoker.png" alt="classic poker photo">
+    <input id=image type="image" src="classicpoker.jpg" alt="classic poker photo">
     <br>
 </body>
 
