--- a/Pages/splash.html
+++ b/Pages/splash.html
@@ -4,7 +4,17 @@
 <title>
     Intuitive Poker
 </title>
-
+<header>
+    <nav>
+        <ul>
+            <li><a href= "../login.html">Login</a></li>
+            <li><a href= "../feedback.html">Feedback</a></li>
+            <li><a href= "../stats.html">Stats</a></li>
+            <li><a href= "../test.html">test</a></li>
+            <li><a href= "../assess.html">Assessments</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
 </body>
 
