--- a/Pages/login.html
+++ b/Pages/login.html
@@ -9,10 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-sm mt-3">
+
+    <div class="sidenav a">
+        <a href="#">Page 1</a>
+        <a href="#">Page 2</a>
+        <a href="#">Page 3</a>
+        <a href="#">Page 4</a>
+        <a href="#">Page 5</a>
+        <a href="#">Page 6</a>
+    </div>
+
+    <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
         <a class="navbar-brand" href="#">
             <img src="pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
         </a>
