--- a/Pages/splash.html
+++ b/Pages/splash.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="../pokerstyle.css">
+
+<head>
+    <title>Intuitive Poker</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
+</head>
 <title>
     Intuitive Poker
 </title>
 <header>
     <nav>
         <ul>
-            <li><a href= "../login.html">Login</a></li>
-            <li><a href= "../feedback.html">Feedback</a></li>
-            <li><a href= "../stats.html">Stats</a></li>
-            <li><a href= "../test.html">test</a></li>
-            <li><a href= "../assess.html">Assessments</a></li>
+            <li><a href="../login.html">Login</a></li>
+            <li><a href="../feedback.html">Feedback</a></li>
+            <li><a href="../stats.html">Stats</a></li>
+            <li><a href="../test.html">test</a></li>
+            <li><a href="../assess.html">Assessments</a></li>
         </ul>
     </nav>
 </header>
+
 <body>
+
+    <!-- Scripts at the bottom allow for faster page loading, put any body stuff above these scripts-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
