Nav header updates.
standardised nav bar at top.

--- a/Pages/feedback.html
+++ b/Pages/feedback.html
@@ -13,7 +13,37 @@
 </title>
 
 <body>
+    </div>
 
+    <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
+        <a class="navbar-brand" href="#">
+            <img src="pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
+        </a>
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  </li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="splash.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="login.html">Login</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="assess.html" tabindex="-1" >Assessments</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="feedback.html" tabindex="-1" >Feedback</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="stats.html" tabindex="-1" >Stats</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     <!-- Scripts at the bottom allow for faster page loading, put any body stuff above these scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
