Lesson format begins!

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="splash.html">
             <img src="pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
         </a>
             <div class="container-fluid">
