--- a/Pages/Lessons/lesson1.html
+++ b/Pages/Lessons/lesson1.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/custom.css">
+        <link rel="stylesheet" type="text/css" href="../css/custom.css">
     </head>
 <title>
     Intuitive Poker
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
         <a class="navbar-brand" href="#">
-          <img src="pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
+          <img src="../pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
      </a>
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 </li class="nav-item">
-                   <a class="nav-link" aria-current="page" href="splash.html">Home</a>
+                   <a class="nav-link" aria-current="page" href="../splash.html">Home</a>
                  </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
+                    <a class="nav-link" href="../login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                 <a class="nav-link" href="assess.html" tabindex="-1" >Assessments</a>
+                 <a class="nav-link" href="../assess.html" tabindex="-1" >Assessments</a>
                 </li>
                 <li class="nav-item">
-                 <a class="nav-link" href="feedback.html" tabindex="-1" >Feedback</a>
+                 <a class="nav-link" href="../feedback.html" tabindex="-1" >Feedback</a>
                 </li>
                 <li class="nav-item">
-                 <a class="nav-link" href="stats.html" tabindex="-1" >Stats</a>
+                 <a class="nav-link" href="../stats.html" tabindex="-1" >Stats</a>
                 </li>
                 </ul>
             </div>
