--- a/Pages/stats.html
+++ b/Pages/stats.html
@@ -16,7 +16,7 @@
             </div>
 
     <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="splash.html">
             <img src="pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
         </a>
             <div class="container-fluid">
@@ -25,7 +25,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  </li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="splash.html">Home</a>
                   </li>
                   <li class="nav-item">
