--- a/Pages/Lessons/lesson1.html
+++ b/Pages/Lessons/lesson1.html
@@ -11,37 +11,51 @@
     Intuitive Poker
 </title>
 <body>
-    </div>
+</div>
 
-    <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
-        <a class="navbar-brand" href="#">
-          <img src="../pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
-     </a>
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                </li class="nav-item">
-                   <a class="nav-link" aria-current="page" href="../splash.html">Home</a>
-                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="../login.html">Login</a>
+<nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
+    <a class="navbar-brand" href="../splash.html">
+        <img src="../pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
+    </a>
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../splash.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../login.html">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../assess.html" tabindex="-1" >Assessments</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../feedback.html" tabindex="-1" >Feedback</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../stats.html" tabindex="-1" >Stats</a>                  
                 </li>
-                <li class="nav-item">
-                 <a class="nav-link" href="../assess.html" tabindex="-1" >Assessments</a>
-                </li>
-                <li class="nav-item">
-                 <a class="nav-link" href="../feedback.html" tabindex="-1" >Feedback</a>
-                </li>
-                <li class="nav-item">
-                 <a class="nav-link" href="../stats.html" tabindex="-1" >Stats</a>
-                </li>
-                </ul>
-            </div>
-         </div>
-    </nav>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Lessons
+                    </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="lessonshome.html">Lesson Home</a>
+                    <a class="dropdown-item" href="lesson1.html">Lesson 1</a>
+                    <a class="dropdown-item" href="lesson2.html">Lesson 2</a>
+                      </ul>
+                    </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <div
+    
 
     
    
