--- a/Pages/Lessons/lessonshome.html
+++ b/Pages/Lessons/lessonshome.html
@@ -40,22 +40,15 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../stats.html" tabindex="-1" >Stats</a>                  
                     </li>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown 2
-            </a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Lessons
+                        </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action 2</a>
-                        <a class="dropdown-item" href="#">Another action 2</a>
-                        <a class="dropdown-item" href="#">Something else here 2</a>
-                    </ul>
+                        <a class="dropdown-item" href="#">Lesson Home</a>
+                        <a class="dropdown-item" href="lesson1.html">Lesson 1</a>
+                        <a class="dropdown-item" href="lesson2.html">Lesson 2</a>
+                          </ul>
                         </ul>
                     </div>
                   </li>
@@ -73,7 +66,7 @@
      data-level-id="1">
      <div class="course-component">
         <a
-          href="Lessons\lesson1.html"
+          href="lesson1.html"
           class="v5-section-shadow-hover v5-section-content course-item "
           data-level-id="1"
           data-progress="0">
