--- a/Pages/stats.html
+++ b/Pages/stats.html
@@ -39,6 +39,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="stats.html" tabindex="-1" >Stats</a>
+                  <li class="nav-item">
+                      <a class="nav-link" href="Lessons/lessonshome.html" tabindex="-1" >Lessons</a>
+                  </li>
                   </li>
                 </ul>
               </div>
